# loft

./: .env.example  .gitignore  CLAUDE.md  CODEX_IMPLEMENTATION.md  Dockerfile.autonomous  GEMINI.md  LICENSE  PHASE_4_5_IMPLEMENTATION_SUMMARY.md  README.md  ROADMAP.md  debate_transcript_real.md  docker-compose.autonomous.yml  gemini.md  generate_debate_transcript.py  pr_update.md  pyproject.toml  thoughts.md
config/: autonomous_example.yaml
datasets/: README.md
debug_demo/: LIVING_DOCUMENT.md  tactical.lp
demo/: comprehensive_demo.py  llm_persistence_demo.py  phase_3_complete_demo.py
demo_asp_rules/: LIVING_DOCUMENT.md  tactical.lp
demo_comprehensive_rules/: LIVING_DOCUMENT.md  tactical.lp
docs/: CONTRIBUTING.md  LEGAL_PROMPTS_AND_META_REASONING.md  MAINTAINABILITY.md  PHASE_4_75_FINDINGS.md  PHASE_7_GEOMETRIC_CONSTRAINTS.md  PHASE_8_BASELINE_VALIDATION.md  README.md  TESTING.md  TEST_COVERAGE.md
examples/: README.md  accumulation_pipeline_example.py  case_analysis_demo.py  confidence_aggregation_example.py  confidence_calibration_example.py  confidence_gating_example.py  confidence_tracking_example.py  coverage_metrics_example.py  example_5_llm_integration.py  feedback_loop_demo.py  knowledge_database_example.py  legal_api_usage.py  legal_qa_evaluation_demo.py  nl_to_asp_examples.py  qa_interface_example.py  search_example.py  statute_of_frauds_demo.py
experiments/: README.md  ensemble_benchmarks.py  llm_rule_integration_test.py  workflow_metrics.py
loft/: __init__.py  config.py
programs/: README.md
reports/: corpus_analysis.json
scripts/: README.md  analyze_metrics.py  analyze_translations.py  (+16 more)
(+555 files in other folders)
